--- a/custom_components/keba_kecontact/manifest.json
+++ b/custom_components/keba_kecontact/manifest.json
@@ -1,5 +1,6 @@
 {
   "domain": "keba_kecontact",
+  "version": "0.0.1",
   "name": "Keba KeContact custom integration",
   "documentation": "",
   "dependencies": [],
